# Tight-Practical-Bounds-for-Subgraph-Densities-in-Ego-centric-Networks

./: CMakeLists.txt
PFAM/: PFAM_6_3_0.txt  PFAM_6_3_2.txt  PFAM_6_3_3_1.txt  PFAM_6_4_0_1.txt  PFAM_6_4_10.txt  PFAM_6_4_10_1.txt  PFAM_6_4_6.txt  PFAM_6_4_7.txt  PFAM_6_4_8.txt  PFAM_6_4_9.txt
Subgraphs_Code/: CMakeLists.txt  readme.txt
Subgraphs_Code/PFAM/: PFAM_6_3_0_1.txt  PFAM_6_3_1.txt  PFAM_6_3_3.txt  PFAM_6_4_0.txt  PFAM_6_4_1.txt  PFAM_6_4_3.txt  PFAM_6_4_4.txt  PFAM_6_4_5.txt
Subgraphs_Code/include/: subgraphs.h
Subgraphs_Code/src/: main.cpp
src/: subgraphs.cpp
